完成一大半

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <img id="look" class="look">
     </div>
   </div>
-  <canvas id="canvas" height=400px width=400px>
-  </canvas>
+  <div id="canvas">
+  </div>
 </body>
   <script src="script/get-form.js"></script>
 </html>
